--- a/index.html
+++ b/index.html
@@ -4,145 +4,135 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Filterable Photo Gallery | Bocaletto Luca</title>
-  <meta name="description" content="A responsive, professional photo gallery with real-time CSS filters and an in-page lightbox. Choose from over a dozen preset filters.">
-  <meta name="keywords" content="photo gallery, CSS filters, grayscale, sepia, saturate, blur, invert, brightness, contrast, hue-rotate, drop-shadow, lightbox, responsive">
+  <meta name="description" content="A professional, responsive photo gallery with dozens of real-time CSS filter presets and an in-page lightbox.">
+  <meta name="keywords" content="photo gallery,CSS filters,grayscale,sepia,saturate,brightness,contrast,hue-rotate,blur,opacity,drop-shadow,invert,lightbox,responsive">
   <link rel="canonical" href="https://github.com/bocaletto-luca/FilterablePhotoGallery">
-  <meta property="og:title" content="Filterable Photo Gallery">
-  <meta property="og:description" content="Choose from dozens of CSS filter presets and view images in a sleek lightbox.">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://github.com/bocaletto-luca/FilterablePhotoGallery">
   <link href="https://fonts.googleapis.com/css?family=Inter:400,500&display=swap" rel="stylesheet">
   <style>
     :root {
       --bg: #fafbfc;
       --header-bg: #2563eb;
       --footer-bg: #1e3a8a;
-      --card: #ffffff;
       --text: #1f2937;
+      --filter: none;
+      --gap: 1rem;
+      --radius: 8px;
       --border: #e5e7eb;
       --accent: #10b981;
       --accent-dark: #047857;
-      --radius: 8px;
-      --gap: 1rem;
-      --filter: none;
     }
-    *,*::before,*::after { box-sizing: border-box; margin: 0; padding: 0; }
+    *,*::before,*::after { box-sizing:border-box; margin:0; padding:0 }
     body {
-      font-family: 'Inter', sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      display: flex; flex-direction: column; min-height: 100vh;
+      font-family:'Inter',sans-serif;
+      background:var(--bg);
+      color:var(--text);
+      display:flex; flex-direction:column;
+      min-height:100vh;
     }
     header {
-      background: var(--header-bg);
-      color: #fff;
-      text-align: center;
-      padding: var(--gap);
+      background:var(--header-bg);
+      color:#fff;
+      padding:var(--gap);
+      text-align:center;
     }
-    header h1 {
-      margin: 0; font-size: 1.75rem; font-weight: 500;
-    }
+    header h1 { margin:0; font-size:1.75rem }
     main {
-      flex: 1;
-      max-width: 1000px; width: 100%;
-      margin: var(--gap) auto; padding: 0 var(--gap);
+      flex:1;
+      max-width:1000px; width:100%;
+      margin:var(--gap) auto;
+      padding:0 var(--gap);
     }
-    /* filter presets */
+    /* FILTER SELECT */
     #filter-controls {
-      display: flex; flex-wrap: wrap;
-      gap: var(--gap);
-      justify-content: center;
-      margin-bottom: var(--gap);
+      margin-bottom:var(--gap);
+      text-align:center;
     }
     #preset-select {
-      padding: .5rem 1rem;
-      font: inherit;
-      border: 1px solid var(--border);
-      border-radius: var(--radius);
-      background: #fff;
+      padding:.5rem 1rem;
+      font:inherit;
+      border:1px solid var(--border);
+      border-radius:var(--radius);
+      background:#fff;
+      width:100%;
+      max-width:400px;
     }
-    /* gallery grid */
+    /* GALLERY GRID */
     #gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(160px,1fr));
-      gap: var(--gap);
+      display:grid;
+      grid-template-columns:repeat(auto-fill,minmax(160px,1fr));
+      gap:var(--gap);
     }
     .g-item {
-      position: relative;
-      background: var(--card);
-      border-radius: var(--radius);
-      overflow: hidden;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
-      cursor: pointer;
+      position:relative;
+      overflow:hidden;
+      border-radius:var(--radius);
+      box-shadow:0 2px 6px rgba(0,0,0,0.08);
+      cursor:pointer;
+      background:#fff;
     }
     .g-item img {
-      display: block;
-      width: 100%; height: auto;
-      filter: var(--filter);
-      transition: filter .3s;
+      width:100%; height:auto;
+      filter:var(--filter);
+      transition:filter .3s;
+      display:block;
     }
     .caption {
-      position: absolute;
-      bottom: 0; left: 0; right: 0;
-      background: rgba(0,0,0,0.6);
-      color: #fff; font-size: .85rem;
-      padding: .3rem; text-align: center;
+      position:absolute; bottom:0; left:0; right:0;
+      background:rgba(0,0,0,0.6);
+      color:#fff; font-size:.85rem;
+      padding:.3rem; text-align:center;
     }
-    /* lightbox */
+    /* LIGHTBOX */
     #lightbox {
-      position: fixed; top:0; left:0;
-      width:100%; height:100%;
-      background: rgba(0,0,0,0.85);
-      display: flex; align-items:center; justify-content:center;
-      visibility: hidden; opacity: 0;
-      transition: opacity .3s;
-      z-index: 1000;
+      position:fixed; top:0; left:0; width:100%; height:100%;
+      background:rgba(0,0,0,0.85);
+      display:flex; align-items:center; justify-content:center;
+      visibility:hidden; opacity:0;
+      transition:opacity .3s;
+      z-index:1000;
     }
     #lightbox.open {
-      visibility: visible; opacity: 1;
+      visibility:visible; opacity:1;
     }
     #lb-content {
-      position: relative;
-      max-width: 90%; max-height: 90%;
-      text-align: center;
+      position:relative;
+      max-width:90%; max-height:90%;
+      text-align:center;
     }
     #lb-img {
-      max-width: 100%; max-height: 80vh;
-      filter: var(--filter);
+      max-width:100%; max-height:80vh;
+      filter:var(--filter);
     }
     #lb-caption {
-      margin-top: .5rem; color: #fff; font-size: 1rem;
+      margin-top:.5rem; color:#fff; font-size:1rem;
     }
     .lb-nav {
-      position: absolute; top:50%; left:0; right:0;
-      display:flex; justify-content: space-between;
-      transform: translateY(-50%);
+      position:absolute; top:50%; left:0; right:0;
+      display:flex; justify-content:space-between;
+      transform:translateY(-50%);
     }
     .lb-nav button {
-      background: rgba(0,0,0,0.6);
-      border: none; color: #fff;
-      font-size: 2rem; padding: .5rem;
-      cursor: pointer; border-radius: var(--radius);
+      background:rgba(0,0,0,0.6);
+      border:none; color:#fff;
+      font-size:2rem; padding:.5rem;
+      cursor:pointer; border-radius:var(--radius);
     }
     #lb-close {
-      position: absolute; top:-1rem; right:-1rem;
-      background: var(--accent); color: #fff;
-      border: none; border-radius: 50%;
-      width: 2.5rem; height: 2.5rem;
-      font-size: 1.5rem; cursor: pointer;
+      position:absolute; top:-1rem; right:-1rem;
+      background:var(--accent); color:#fff;
+      border:none; border-radius:50%;
+      width:2.5rem; height:2.5rem;
+      font-size:1.5rem; cursor:pointer;
     }
-    /* footer */
     footer {
-      background: var(--footer-bg);
-      color: #fff;
-      text-align: center;
-      padding: .75rem;
+      background:var(--footer-bg);
+      color:#fff;
+      text-align:center;
+      padding:.75rem;
     }
-    footer a {
-      color: #fff; text-decoration: underline;
-    }
+    footer a { color:#fff; text-decoration:underline }
     @media(max-width:600px){
-      #filter-controls { flex-direction: column; align-items: stretch; }
+      #preset-select { width:100% }
     }
   </style>
 </head>
@@ -154,22 +144,30 @@
 
   <main>
     <div id="filter-controls">
-      <label for="preset-select" class="visually-hidden">Choose filter</label>
-      <select id="preset-select">
+      <select id="preset-select" aria-label="Choose filter preset">
         <option value="none">None</option>
         <option value="grayscale(100%)">Grayscale</option>
         <option value="sepia(100%)">Sepia</option>
-        <option value="saturate(150%)">Saturate</option>
+        <option value="saturate(200%)">Saturate</option>
         <option value="invert(100%)">Invert</option>
-        <option value="brightness(130%)">Brightness</option>
-        <option value="contrast(150%)">Contrast</option>
-        <option value="hue-rotate(90deg)">Hue Rotate</option>
-        <option value="blur(2px)">Blur</option>
-        <option value="opacity(50%)">Opacity</option>
-        <option value="drop-shadow(0 0 8px rgba(0,0,0,0.5))">Drop Shadow</option>
+        <option value="brightness(150%)">Brightness +50%</option>
+        <option value="brightness(50%)">Brightness −50%</option>
+        <option value="contrast(150%)">Contrast +50%</option>
+        <option value="contrast(50%)">Contrast −50%</option>
+        <option value="hue-rotate(90deg)">Hue Rotate 90°</option>
+        <option value="hue-rotate(180deg)">Hue Rotate 180°</option>
+        <option value="blur(2px)">Blur 2px</option>
+        <option value="blur(5px)">Blur 5px</option>
+        <option value="opacity(50%)">Opacity 50%</option>
+        <option value="drop-shadow(0 0 8px rgba(0,0,0,0.6))">Drop-Shadow</option>
         <option value="sepia(60%) saturate(200%)">Warm Vintage</option>
-        <option value="contrast(120%) brightness(110%)">Pop</option>
-        <option value="hue-rotate(180deg) invert(100%)">X-Ray</option>
+        <option value="contrast(120%) brightness(110%)">Pop Color</option>
+        <option value="invert(100%) hue-rotate(180deg)">X-Ray</option>
+        <option value="grayscale(50%) blur(2px)">Dreamy Gray</option>
+        <option value="sepia(80%) contrast(120%)">Retro</option>
+        <option value="hue-rotate(45deg) saturate(150%)">Fantasy</option>
+        <option value="drop-shadow(10px 10px 10px rgba(0,255,0,0.8))">Neon Glow</option>
+        <option value="brightness(120%) contrast(80%)">Soft Light</option>
       </select>
     </div>
 
@@ -196,20 +194,18 @@
   </footer>
 
   <script>
-    // sample images
     const images = [
-      {url:'https://picsum.photos/id/1015/600/400', caption:'Mountain'},
-      {url:'https://picsum.photos/id/1024/600/400', caption:'Dog'},
-      {url:'https://picsum.photos/id/1025/600/400', caption:'Kitten'},
-      {url:'https://picsum.photos/id/1035/600/400', caption:'Beach'},
-      {url:'https://picsum.photos/id/1042/600/400', caption:'Forest'},
-      {url:'https://picsum.photos/id/1021/600/400', caption:'Lake'},
-      {url:'https://picsum.photos/id/1050/600/400', caption:'Desert'},
-      {url:'https://picsum.photos/id/1069/600/400', caption:'City'},
-      {url:'https://picsum.photos/id/1074/600/400', caption:'Bridge'}
+      {url:'https://picsum.photos/id/1015/600/400',caption:'Mountain'},
+      {url:'https://picsum.photos/id/1024/600/400',caption:'Dog'},
+      {url:'https://picsum.photos/id/1025/600/400',caption:'Kitten'},
+      {url:'https://picsum.photos/id/1035/600/400',caption:'Beach'},
+      {url:'https://picsum.photos/id/1042/600/400',caption:'Forest'},
+      {url:'https://picsum.photos/id/1021/600/400',caption:'Lake'},
+      {url:'https://picsum.photos/id/1050/600/400',caption:'Desert'},
+      {url:'https://picsum.photos/id/1069/600/400',caption:'City'},
+      {url:'https://picsum.photos/id/1074/600/400',caption:'Bridge'}
     ];
 
-    // refs
     const gallery      = document.getElementById('gallery');
     const presetSelect = document.getElementById('preset-select');
     const lightbox     = document.getElementById('lightbox');
@@ -218,13 +214,11 @@
     const lbClose      = document.getElementById('lb-close');
     const lbPrev       = document.getElementById('lb-prev');
     const lbNext       = document.getElementById('lb-next');
+    let currentIndex   = 0;
 
-    let currentIndex = 0;
-
-    // render grid
     function renderGallery() {
       gallery.innerHTML = '';
-      images.forEach((img, i) => {
+      images.forEach((img,i) => {
         const div = document.createElement('div');
         div.className = 'g-item';
         div.innerHTML = `
@@ -235,15 +229,12 @@
       });
     }
 
-    // apply filter
     presetSelect.onchange = () => {
       document.documentElement.style.setProperty('--filter', presetSelect.value);
     };
 
-    // lightbox
     function openLightbox(i) {
-      currentIndex = i;
-      showImage(i);
+      currentIndex = i; showImage(i);
       lightbox.classList.add('open');
     }
     function closeLightbox() {
@@ -268,9 +259,9 @@
     lbNext.onclick  = nextImage;
     document.addEventListener('keydown', e => {
       if (!lightbox.classList.contains('open')) return;
-      if (e.key === 'Escape') closeLightbox();
-      if (e.key === 'ArrowLeft') prevImage();
-      if (e.key === 'ArrowRight') nextImage();
+      if (e.key==='Escape') closeLightbox();
+      if (e.key==='ArrowLeft') prevImage();
+      if (e.key==='ArrowRight') nextImage();
     });
 
     // initialize
